--- a/VeterinarySystem/VeterinarySystem/Vet.resx
+++ b/VeterinarySystem/VeterinarySystem/Vet.resx
@@ -1265,7 +1265,7 @@
         vukAqYxPlOaGWcvl/j/MdB1tjnzeOwAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="button5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="logout.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAFEAAAAoCAYAAACGohY/AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
         JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAABzEAAAcxAF6yPTiAAAAB3RJ
