--- a/VeterinarySystem/VeterinarySystem/ProfileWindow.resx
+++ b/VeterinarySystem/VeterinarySystem/ProfileWindow.resx
@@ -588,4 +588,32 @@
         rkJggg==
 </value>
   </data>
+  <data name="delete.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAU8SURBVGhD7ZmLT1tVHMf5E/gP9E/YH2AikdZkC4+OZQMEF6bMoJvSQBm99xYtsPEIY1RDW9hk
+        1LHsIRKdtLwyoaNl0zEF92DJMAtTSSRmytaiIMzj/R7OJbflQEvKrZeEb/JN+jjn3N/nntfvnpuyqwTk
+        FI17XIKhRfYI7BTTS93WtJfZ3ztDctAOl2ggl+qzlkY6i8hgewHprNm35JYMIaf4WhErpm8Bot32+vLD
+        XjNZ+OFUhMcuFhMAuoR0EyuuT9HhJAfKg1CMHnKL6c9ZFX0KvdF9OmeRB6D4j+/s+u+VNtEYxB3nAajd
+        VZcRdooGO6umP8mrkx8Tmxe82udr9i7qHcTskVcnXvCK5wI2OrQwn1g1/Qn7hEs0hrE68SDgL5oPrLhF
+        wz1WRb/CPoE77j9fRCe2AoCe6DlzYBmguu4NtbAiyTAhAF2sywp1Vu/9G5/REzsGQi0AYVKvegcCQPtE
+        355Moe9Vnk32kVRWTL/KFLzmbLFvNkv0kRj2ApZV04/yBI8lW/D9YrINLB9vu0fqe5+Spv55rqXLT0hB
+        fWA5W/ItZIo+fSSRx07UmAttF0K4y7EAoo3ygPlfe6a00v5KoeR5BoCjjnFS++UcN9hYRs9kSn0+1mzy
+        BIAjgnMaAG823CAfds9yA4zXGGZoK2kLwDFJeukd0TGcI10j+Sev0wCig6rsekzKPY/W/R7LAMmw9qax
+        S2kns7WqI0f8ihy0D3IDBdTh+mEaEMZ99P+xrDkINjG3zThbL721gotFzwN8P3I6SAN5W2qfybH5ZuIB
+        KXFORNwQTUFa7GmpeMZGWo6cqeLM5+Rw4yi9MFam4o/HaQCF0mfPzFZrMersrxqcjAeksCEY0XNop6iy
+        NY9eeLvlthrSkB8pSd9MoIleEAA5Ni/Jly4tYellxakSAYlua9uEHgHI+NUSCjJ+pYS8Jzb9e8jW8+Jd
+        oeFTVixCugSBlJR81cZws7i/gf3FlW5BIDwsYZihh9hPG0rXIFvRLsguSAwh75GfK0a2mpVmCj5/PCAy
+        MA1e7W0HAYTc8MTqBbx/bgUmXpC82qEXlrqz5PaAg7pWKCJ1QkEGa2Z7JAM4lLsEyw8+M+yvmJLL2zFs
+        eMGrXXhyaKWxpXlts6UHE/LKyJpJTOaWidRyZ6C07JNAZX7N0K+5coKYWz30V0nzaKOldewDnsucwVxW
+        nQogBQ2jK7zg1cYNavro6D8PvWZ6bOSWjAusicRlcQbsFleQbNWsOhVA8k/553nBqw2QKvH4NWyyMsTU
+        tp+wSB3fTl4OPiHTz0lMUxB3IGI44ODhUO1wiBe82gDRNG2vaAsGEwFBcHTYcIJXjNQfZUzWfu1ew5U7
+        xxytX09xA78xPb/2+dZMmIJgXrGqVPGAKI+2rIo2wjxp6v5xUQ0Anx14RAPvnZij3wEVPT8g/YC4guba
+        ru9DPAjFgBl68JRUuIJhVm1NGC4IcrMTleSAyGMewapBPN88XgeCeYSFgVWLEILkHUwoxoaJVIYV10Y8
+        EDh6aAHE4gr4WbUIxQNisg3cYcW1ESYvAlZPbMXq35p77hIsDKxahOIBQSrDimunjUDUbrw6GcbCwKpE
+        yGTr/8l8booLAeNUMkvwelhx7XSi7eZvyhDayLaO24tlzjHu4XOsVB65mNxr2r8IFc7duhNrU0SvRW+G
+        imJlwG/U+cNJAcEk3gzk/u8rCYEgF0sOiDz2qy+MkyvBn7lWVjBWfJ0Q5MHq6+T99rtcYzHQNM9ShLGP
+        PWIzIydjxdcJL24wTzYyll5dvqlKnlJS/gNDUuVmpUhYsAAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
